--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "D&D 5E Tools",
     "short-name": "D&D 5E",
-    "start_url": "5etools.html",
+    "start_url": "index.html",
     "icons": [
         {
             "src": "img/android-chrome-192x192.png",
