--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "D&D 5E Tools",
-    "short-name": "D&D 5E",
+    "short_name": "D&D 5E",
     "start_url": "index.html",
     "icons": [
         {
