--- a/package.json
+++ b/package.json
@@ -2,34 +2,37 @@
   "name": "mattmillerc.github.io",
   "version": "1.0.0",
   "description": "",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
-    "watch": "nodemon -x \"http-server\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mattMillerC/mattMillerC.github.io.git"
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mattMillerC/mattMillerC.github.io/issues"
-  },
-  "homepage": "https://github.com/mattMillerC/mattMillerC.github.io#readme",
   "dependencies": {
+    "@material/drawer": "^5.1.0",
+    "@material/menu-surface": "^5.1.0",
+    "@material/notched-outline": "^5.1.0",
+    "@material/ripple": "^5.1.0",
+    "@material/switch": "^5.1.0",
+    "@material/textfield": "^5.1.0",
     "@polymer/polymer": "^3.0.0-pre.12",
     "@vaadin/vaadin-dialog": "^2.2.1",
     "@vaadin/vaadin-grid": "^5.5.2",
-    "@vaadin/vaadin-text-field": "^2.5.4",
-    "@webcomponents/webcomponentsjs": "^1.0.20",
-    "http-server": "^0.12.1",
-    "material-components-web": "^5.1.0",
-    "nodemon": "^2.0.2"
+    "@vaadin/vaadin-text-field": "^2.5.4"
   },
-  "resolutions": {
-    "@webcomponents/webcomponentsjs": "1.0.20"
+  "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "http-server": "^0.11.1",
+    "polymer-cli": "^1.8.0",
+    "static-http2-server": "^1.7.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "wct-browser-legacy": "^1.0.0",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   }
 }
