--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@material/tab-bar": "^6.0.0",
     "@material/textfield": "^5.1.0",
     "@polymer/polymer": "^3.0.0-pre.12",
-    "@vaadin/vaadin-grid": "^5.6.6",
-    "@vaadin/vaadin-material-styles": "^1.3.2",
-    "@vaadin/vaadin-select": "^2.3.0-alpha4",
-    "@vaadin/vaadin-text-field": "~2.7.0-alpha4"
+    "@vaadin/vaadin-combo-box": "*",
+    "@vaadin/vaadin-grid": "*",
+    "@vaadin/vaadin-material-styles": "*",
+    "@vaadin/vaadin-select": "*",
+    "@vaadin/vaadin-text-field": "*"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.4.3",
